Validation for when user has no budget or transactions

--- a/MyWebsite/Views/Account/ForgotPassword.cshtml
+++ b/MyWebsite/Views/Account/ForgotPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ForgotPasswordViewModel
 <link rel="stylesheet" href="~/css/materialize.css" />
 
-<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">FORGOT PASSWORD</h3>
+<h3 style="text-align:center; margin-top:150px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">FORGOT PASSWORD</h3>
 
-<div style="width: 30%; margin-left: 150px; margin-top: 150px;">
+<div style="width: 30%; margin-left: 150px; margin-top: 100px;">
     <div class="row">
         <div class="col-sm-6">
             <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Enter Your Email</h4>
@@ -18,7 +18,7 @@
                         <button style="margin-top:10px;" type="submit" class=" waves-effect waves-light btn sharpCorners black-btn">Reset Password</button>
                     </form>
                 </div>
-                <div style="margin-top: 10px;">
+                <div style="margin-top: 40px; margin-left: 3px;">
                     <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
                 </div>
             </div>
