--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -29,54 +29,54 @@
                 <input type="hidden" asp-for="Month" />
 
                 <div class="row">
-                    <div class="col l5 m4"></div>
+                    <div class="col l4 m4"></div>
                     <div class="col l6 m5 s12">
-                        <label class="editBudgetLimitLabel">Grocery | Restaurant </label>
+                        <label class="editBudgetLimitLabel"><i style="margin-top: 8px;" class="material-icons left">local_dining</i> Grocery | Restaurant </label>
                         <input asp-for="GroceryLimit" class="editTag" />
                     </div>
                     <div class="col l5 m4"></div>
                 </div>
 
                 <div class="row">
-                    <div class="col l5 m4"></div>
+                    <div class="col l4 m4"></div>
                     <div class=" col l6 m5 s12">
-                        <label class="editBudgetLimitLabel">Mortgage | Rent </label>
+                        <label class="editBudgetLimitLabel"><i style="margin-top: 8px;" class="material-icons left">home</i> Mortgage | Rent </label>
                         <input asp-for="HousingLimit" class="editTag" />
                     </div>
                     <div class="col l5 m4"></div>
                 </div>
 
                 <div class="row">
-                    <div class="col l5 m4"></div>
+                    <div class="col l4 m4"></div>
                     <div class="col l6 m5 s12">
-                        <label class="editBudgetLimitLabel">Entertainment </label>
+                        <label class="editBudgetLimitLabel"><i style="margin-top: 8px;" class="material-icons left">local_activity</i> Entertainment </label>
                         <input asp-for="EntLimit" class="editTag" />
                     </div>
                     <div class="col l5 m4"></div>
                 </div>
 
                 <div class="row">
-                    <div class="col l5 m4"></div>
+                    <div class="col l4 m4"></div>
                     <div class="col l6 m5 s12">
-                        <label class="editBudgetLimitLabel">Bills | Payments </label>
+                        <label class="editBudgetLimitLabel"><i style="margin-top: 8px;" class="material-icons left">monetization_on</i> Bills | Payments </label>
                         <input asp-for="BillsLimit" class="editTag" />
                     </div>
                     <div class="col l5 m4"></div>
                 </div>
 
                 <div class="row">
-                    <div class="col l5 m4"></div>
+                    <div class="col l4 m4"></div>
                     <div class="col l6 m5 s12">
-                        <label class="editBudgetLimitLabel">Gas | Auto </label>
+                        <label class="editBudgetLimitLabel"><i style="margin-top: 8px;" class="material-icons left">drive_eta</i> Gas | Auto </label>
                         <input asp-for="GasLimit" class="editTag" />
                     </div>
                     <div class="col l5 m4"></div>
                 </div>
 
                 <div class="row">
-                    <div class="col l5 m4"></div>
+                    <div class="col l4 m4"></div>
                     <div class="col l6 m5 s12">
-                        <label class="editBudgetLimitLabel">Miscellaneous </label>
+                        <label class="editBudgetLimitLabel"><i style="margin-top: 8px;" class="material-icons left">gesture</i> Miscellaneous </label>
                         <input asp-for="MiscLimit" class="editTag" />
                     </div>
                     <div class="col l5 m4"></div>
