--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -26,8 +26,15 @@
                             <span>
                                 <i style="margin-right: 10px;" class="fas fa-money-check-alt"></i>Average Monthly Spending
                             </span>
-                            <span style="float:right">
-                                @String.Format("{0:C}", Model.AvgMonthlySpending)
+                            <span style="float: right">
+                                @if (Model.AmtOverOrUnder > 0)
+                                {
+                                    @String.Format("{0:C}", Model.AvgMonthlySpending)
+                                }
+                                else
+                                {
+                                    <i class="fas fa-exclamation-circle"></i><text> No information</text>
+                                }
                             </span>
                         </div>
                     </div>
@@ -40,9 +47,17 @@
                             </span>
                             <span style="float:right">
                                 @if (Model.AmtOverOrUnder > 0)
-                                {@String.Format("{0:C}", Model.AmtOverOrUnder)<span> under</span>}
+                                {
+                                    @String.Format("{0:C}", Model.AmtOverOrUnder)<span> under</span>
+                                }
                                 @if (Model.AmtOverOrUnder < 0)
-                                {@Math.Abs(Model.AmtOverOrUnder)<span style="color:#D50000 !important;"> over</span>}
+                                {
+                                    @Math.Abs(Model.AmtOverOrUnder)<span style="color:#D50000 !important;"> over</span>
+                                }
+                                else if(Model.AmtOverOrUnder == 0)
+                                {
+                                    <i class="fas fa-exclamation-circle"></i><text> No information</text>
+                                }
                             </span>
                         </div>
                     </div>
@@ -53,8 +68,15 @@
                             <span>
                                 <i style="margin-right: 10px;" class="fas fa-credit-card"></i>Most Common Purchase
                             </span>
-                            <span style="float:right">
-                                @Model.MostCommonCategory @Model.CategoryTimes times
+                            <span style="float: right">
+                                @if (Model.CategoryTimes > 0)
+                                {
+                                    @Model.MostCommonCategory<text> </text>@Model.CategoryTimes <text > times</text>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-exclamation-circle"></i><text> No information</text>
+                                }
                             </span>
                         </div>
                     </div>
@@ -68,8 +90,15 @@
                             <span>
                                 <i style="margin-right: 10px;" class="far fa-calendar-alt"></i>Number of Months Under Budget
                             </span>
-                            <span style="float:right">
-                                @Model.NumMonthsUnderBudget / @Model.TotalMonths months
+                            <span style="float: right">
+                                @if (Model.TotalMonths > 0)
+                                {
+                                    @Model.NumMonthsUnderBudget <text>/</text> @Model.TotalMonths <text> months</text>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-exclamation-circle"></i><text> No information</text>
+                                }
                             </span>
                         </div>
                     </div>
@@ -81,8 +110,15 @@
                                 <i style="margin-right: 10px;" class="fas fa-balance-scale"></i>Compare Last Two Months
                             </span>
                             <span style="float: right">
-                                <text>@DateTime.Now.ToString("MMMM").Substring(0, 3) : @String.Format("{0:C}", Model.TotalSpentFirstMonth)</text>
-                                <text>@DateTime.Now.AddMonths(-1).ToString("MMMM").Substring(0, 3) : @String.Format("{0:C}", Model.TotalSpentSecondMonth)</text>
+                                @if (Model.TotalSpentFirstMonth > 0 || Model.TotalSpentSecondMonth > 0)
+                                {
+                                    <text>@DateTime.Now.ToString("MMMM").Substring(0, 3) : @String.Format("{0:C}", Model.TotalSpentFirstMonth)</text>
+                                    <text>@DateTime.Now.AddMonths(-1).ToString("MMMM").Substring(0, 3) : @String.Format("{0:C}", Model.TotalSpentSecondMonth)</text>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-exclamation-circle"></i><text> No information</text>
+                                }
                             </span>
                         </div>
                     </div>
@@ -93,8 +129,15 @@
                             <span class="white-text">
                                 <i style="margin-right: 10px;" class="fas fa-piggy-bank"></i>Category with Highest Savings
                             </span>
-                            <span style="float:right">
-                                <text>@Model.HighSaveCat : @String.Format("{0:C}", Model.HighSaveAmt)</text>
+                            <span style="float: right">
+                                @if (Model.HighSaveAmt > 0)
+                                {
+                                    <text>@Model.HighSaveCat : @String.Format("{0:C}", Model.HighSaveAmt)</text>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-exclamation-circle"></i><text> No information</text>
+                                }
                             </span>
                         </div>
                     </div>
@@ -115,7 +158,7 @@
                     {
                         var hiddenContainerId = "budgetInsights" + dataItem.CategoryType;
                         <div id=@hiddenContainerId class="col s12 m8" style="float: right; display:none">
-                            <h5 style="text-align: center; margin: 30px;">@ViewBag.ListOfCategoryNames[dataItem.CategoryType -1]</h5>
+                            <h5 style="text-align: center; margin: 30px;">@ViewBag.ListOfCategoryNames[dataItem.CategoryType - 1]</h5>
                             <table style="font-size: 17px;">
                                 <tr style="border-bottom: 1px solid #cfd8dc;">
                                     <th>Average Spent Each Month</th>
@@ -129,11 +172,22 @@
                                     {
                                         <td style="color: #76c5ac !important; text-align:center">@String.Format("{0:C}", dataItem.AvgOverUnderPerCategory) Under</td>
                                     }
-                                    else //Over Budget
+                                    @if (dataItem.AvgOverUnderPerCategory == 0)
+                                    {
+                                        <td style="text-align:center"><i class="fas fa-exclamation-circle"></i><text> No information</text></td>
+                                    }
+                                    else if(dataItem.AvgOverUnderPerCategory != 0 && dataItem.AvgOverUnderPerCategory < 0) //Over Budget
                                     {
                                         <td style="color:#D50000 !important; text-align:center">@String.Format("{0:C}", Math.Abs(dataItem.AvgOverUnderPerCategory)) Over</td>
                                     }
-                                    <td style="text-align: center;">@dataItem.NumMonthsUnderBudgetPerCat Months</td>
+                                    @if (dataItem.NumMonthsUnderBudgetPerCat == 1)
+                                    {
+                                        <td style="text-align: center;">@dataItem.NumMonthsUnderBudgetPerCat Month</td>
+                                    }
+                                    else
+                                    {
+                                        <td style="text-align: center;">@dataItem.NumMonthsUnderBudgetPerCat Months</td>
+                                    }
                                     <td style="text-align: center;">@String.Format("{0:C}", dataItem.AvgPurchasePrice)</td>
                                 </tr>
                             </table>
@@ -170,27 +224,77 @@
         $('select').formSelect();
     });
 
+    var clickedFood = true;
+    var clickedHousing = true;
+    var clickedBills = true;
+    var clickedEnt = true;
+    var clickedGas = true;
+    var clickedMisc = true;
+
     $('#food').on('click', function () {
+        if (clickedFood) {
+            $(this).css("cssText", "background-color: #76c5ac !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedFood = false;
+        } else {
+            $(this).css("cssText", "background-color: #009688 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedFood = true;
+        }
         $('#budgetInsights1').toggle();
     });
 
     $('#housing').on('click', function () {
+        if (clickedHousing) {
+            $(this).css("cssText", "background-color: #76c5ac !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedHousing = false;
+        } else {
+            $(this).css("cssText", "background-color: #009688 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedHousing = true;
+        }
         $('#budgetInsights2').toggle();
     });
 
     $('#bills').on('click', function () {
+        if (clickedBills) {
+            $(this).css("cssText", "background-color: #76c5ac !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedBills = false;
+        } else {
+            $(this).css("cssText", "background-color: #009688 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedBills = true;
+        }
         $('#budgetInsights3').toggle();
     });
 
     $('#entertainment').on('click', function () {
+        if (clickedEnt) {
+            $(this).css("cssText", "background-color: #76c5ac !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedEnt = false;
+        } else {
+            $(this).css("cssText", "background-color: #009688 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedEnt = true;
+        }
         $('#budgetInsights4').toggle();
     });
 
     $('#gas').on('click', function () {
+        if (clickedGas) {
+            $(this).css("cssText", "background-color: #76c5ac !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedGas = false;
+        } else {
+            $(this).css("cssText", "background-color: #009688 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedGas = true;
+        }
         $('#budgetInsights5').toggle();
     });
 
     $('#misc').on('click', function () {
+        if (clickedMisc) {
+            $(this).css("cssText", "background-color: #76c5ac !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedMisc = false;
+        } else {
+            $(this).css("cssText", "background-color: #009688 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            clickedMisc = true;
+        }
         $('#budgetInsights6').toggle();
     });
+
 </script>
