--- a/MyWebsite/Views/Budgets/ExportExcel.cshtml
+++ b/MyWebsite/Views/Budgets/ExportExcel.cshtml
@@ -2,3 +2,12 @@
 
 <div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
 <h3 class="painlessBudgetTitle">The Painless Budget</h3>
+
+<div class="container">
+    <div style="margin-top: 25px; text-align: center;">
+        <h6 class="greenCenterTxt">@ViewBag.Deleted</h6>
+        <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large underline-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+    </div>
+
+    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Export to Excel</h4>
+</div>
