--- a/MyWebsite/Views/Budgets/ExportExcel.cshtml
+++ b/MyWebsite/Views/Budgets/ExportExcel.cshtml
@@ -8,7 +8,7 @@
         <a href='@Url.Action("Index", "Budgets")' ; class="waves-effect waves-light btn-large underline-hover grey darken-4"><i class="material-icons left">arrow_back</i> Return to Budget</a>
     </div>
 
-    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center"><i class="far fa-file-excel"></i> Export to Excel</h4>
+    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Export to Excel</h4>
     
     <div align="center">
         <a href='@Url.Action("ExportToExcel", "Budgets", new {month = 13})'; class="waves-effect waves-light btn-large underline-hover grey darken-4" style="margin: 30px;"><i class="far fa-calendar-plus"></i> Export all Months to Excel</a>
